# core_rs_workspace

./: .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  TODO.md  clippy.toml  codebook.toml
.github/workflows/: build.yml  codeql.yml  docker.yml
app/demo/: Cargo.toml
app/demo/assets/: conf.json
app/demo/examples/: action_log.rs  api_client.rs  db.rs  db_migration.rs  error.rs  http.rs  http_client.rs  kafak_consumer.rs  kafka_producer.rs  nats_consumer.rs  nats_producer.rs  nats_service.rs  scheduler.rs  stats_collector.rs  test.rs  validator.rs
app/demo/src/: job.rs  lib.rs  main.rs  user.rs  web.rs
app/demo/src/user/: web.rs
app/log_collector/: Cargo.toml  Dockerfile  cloudbuild.yml
app/log_collector/assets/: conf.json
app/log_collector/src/: kafka.rs  main.rs  web.rs
app/log_exporter/: Cargo.toml  Dockerfile  cloudbuild.yml
app/log_exporter/assets/: conf.json
app/log_exporter/src/: job.rs  kafka.rs  main.rs  service.rs  web.rs
app/log_exporter/src/kafka/: action_log_handler.rs  event_handler.rs
app/log_processor/: Cargo.toml  Dockerfile  cloudbuild.yml
app/log_processor/assets/: conf.json  kibana_objects.json
app/log_processor/assets/clickhouse/: action.sql  trace.sql
app/log_processor/src/: clickhouse.rs  elasticsearch.rs  job.rs  kafka.rs  kibana.rs  main.rs  opensearch.rs
app/log_processor/src/kafka/: action_log_handler.rs  event_handler.rs  stat_handler.rs
docker/clickhouse/: docker-compose.yml
docker/clickhouse/config.d/: custom_config.xml
docker/clickhouse/users.d/: root.xml  viewer.xml
docker/nats/: docker-compose.yml
docker/nats/conf/: queue.json  stream.json
lib/core_ng/src/: http.rs
lib/framework/: Cargo.toml
lib/framework/src/: api.rs  asset.rs  config.rs  db.rs  exception.rs  http.rs  json.rs  lib.rs  log.rs  network.rs  number.rs  pool.rs  schedule.rs  shell.rs  shutdown.rs  string.rs  system.rs  task.rs  validate.rs  web.rs
lib/framework/src/db/: query.rs  repository.rs
lib/framework/src/exception/: error_code.rs
lib/framework/src/fs/: path.rs  path_buf.rs
lib/framework/src/kafka/: consumer.rs  producer.rs  topic.rs
lib/framework/src/log/: action.rs  appender.rs  id_generator.rs  layer.rs  metrics.rs
lib/framework/src/schedule/: controller.rs  trigger.rs
lib/framework/src/web/: api.rs  body.rs  client_info.rs  error.rs  server.rs
lib/framework_clickhouse/: Cargo.toml
lib/framework_clickhouse/src/: data_type.rs  lib.rs
lib/framework_db/: Cargo.toml
lib/framework_db/src/: cond.rs  connection.rs  database.rs  field.rs  from_row.rs  insert.rs  lib.rs  query.rs  repository.rs  update.rs
lib/framework_kafka/: Cargo.toml
lib/framework_kafka/src/: consumer.rs  lib.rs  producer.rs
lib/framework_macro/: Cargo.toml
lib/framework_macro/src/: api.rs  entity.rs  enum8.rs  lib.rs  model.rs  nats_api.rs  row.rs  util.rs  validate.rs  webservice.rs
lib/framework_nats/: Cargo.toml
lib/framework_nats/src/: consumer.rs  consumer_v2.rs  lib.rs  producer.rs  service.rs
lib/framework_validator/: Cargo.toml
lib/framework_validator/src/: field.rs  lib.rs
test/clickhouse_test/: Cargo.toml
test/clickhouse_test/src/: lib.rs
test/clickhouse_test/tests/: data_type_test.rs
test/db_test/: Cargo.toml
test/db_test/src/: lib.rs
