[workspace]
resolver = "3"
members = ["app/*", "lib/*"]

[workspace.dependencies]
framework = { path = "lib/framework", features = ["kafka"] }
framework_validator = { path = "lib/framework_validator"}

tracing = "*"
serde = { version = "*", features = ["derive"] }

tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["macros"] }
chrono = { version = "*", features = ["serde"] }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

# [profile.release]
# debug = "line-tables-only"
# opt-level = 3
