[workspace]
resolver = "3"
members = ["app/*", "lib/*", "test/*"]

[workspace.package]
version = "0.5.3"

[workspace.dependencies]
framework = { path = "lib/framework", features = ["kafka"] }
framework_macro = { path = "lib/framework_macro" }

tracing = { version = "*", features = ["max_level_debug"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }

tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["macros"] }

# [profile.dev]
# debug = "line-tables-only"

# [profile.dev.package."*"]
# debug = false

# [profile.debugging]
# inherits = "dev"
# debug = true

[profile.release]
debug = "line-tables-only"
opt-level = 3
