[package]
name = "demo"
version.workspace = true
edition = "2024"

[dependencies]
framework = { workspace = true, features = ["db"] }
framework_macro = { workspace = true, features = ["db"] }

tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true

bytes = "*"
tokio-util = "*"
tokio-stream = "*"
futures = "*"
uuid = { version = "*", features = ["v7"] }
