[package]
name = "demo"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
framework_db.workspace = true
framework_kafka.workspace = true
framework_macro.workspace = true

tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true

bytes = "*"
tokio-util = "*"
tokio-stream = "*"
futures = "*"
uuid = { version = "*", features = ["v7"] }
serde_html_form = "*"
