[package]
name = "demo"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
framework_db.workspace = true
framework_kafka.workspace = true
framework_nats.workspace = true
framework_macro.workspace = true

serde.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
axum.workspace = true
libc = "*"
