[package]
name = "log_collector"
version = "0.5.1"
edition = "2024"

[dependencies]
framework = { workspace = true, features = ["kafka"] }
framework_macro = { workspace = true, features = [] }

tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true
