[package]
name = "log_collector"
version.workspace = true
edition = "2024"

[dependencies]
framework = { workspace = true, features = ["kafka"] }
framework_macro.workspace = true

tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true

[lints]
workspace = true
