[package]
name = "log_exporter"
version.workspace = true
edition = "2024"

[dependencies]
framework = { workspace = true, features = ["kafka"] }

tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true

hostname = "*"
sha2 = "*"
hex = "*"
