[package]
name = "log_exporter"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
framework_kafka.workspace = true
framework_macro.workspace = true

serde.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true

sha2 = "*"
hex = "*"

[lints]
workspace = true
