[package]
name = "log_processor"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
framework_kafka.workspace = true

serde.workspace = true
chrono.workspace = true
tokio.workspace = true

clickhouse = { version = "*", features = ["time", "inserter"] }
serde_repr = "*"
time = "*"
regex = "*"

[lints]
workspace = true
