[package]
name = "framework"
version.workspace = true
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "*", default-features = false, features = ["std", "registry", "fmt"] }

serde.workspace = true
serde_json = "*"
serde_html_form = "*"

tokio.workspace = true
tokio-util = { version = "*", features = ["rt"] }

http = "*"
axum.workspace = true
axum-extra = { version = "*", features = ["cookie"] }
tower-http = {version ="*", features = ["fs"]}

reqwest = { version = "0", features = ["stream"] }

rdkafka = { version = "*", default-features = false, features = [
    "dynamic-linking",
    "tokio",
    "zstd",
], optional = true }

chrono.workspace = true
uuid = { version = "*", features = ["v7"] }

futures = "*"
bytes = "*"
bs58 = "*"
indexmap = { version = "*", features = ["serde"] }

[features]
kafka = ["dep:rdkafka"]

[lints]
workspace = true
