[package]
name = "framework"
version.workspace = true
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "*", default-features = false, features = ["std", "registry", "fmt"] }

serde.workspace = true
serde_json = "*"
serde_html_form = "*"

tokio.workspace = true
tokio-util = { version = "*", features = ["rt"] }
tokio-stream = "*"

http = "*"
axum.workspace = true
axum-extra = { version = "*", features = ["cookie"] }
tower-http = {version ="*", features = ["fs"]}

reqwest = { version = "0", features = ["stream"] }

chrono.workspace = true
uuid.workspace = true

futures = "*"
bytes = "*"
bs58 = "*"
indexmap = { version = "*", features = ["serde"] }

[lints]
workspace = true
