[package]
name = "framework"
version.workspace = true
edition = "2024"

[dependencies]
serde.workspace = true
serde_json = "*"
serde_html_form = "*"

tokio.workspace = true
tokio-util = { version = "*", features = ["rt"] }
tokio-stream = "*"

http = "*"
axum.workspace = true
axum-extra = { version = "*", features = ["cookie"] }
tower-http = {version ="*", features = ["fs"]}

reqwest = { version = "0", features = ["stream"] }

chrono.workspace = true
uuid.workspace = true

futures = "*"
bytes = "*"
bs58 = "*"
libc = "*"
indexmap = { version = "*", features = ["serde"] }

[lints]
workspace = true
