[package]
name = "framework_clickhouse"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true

# pinned to minor version: framework_macro::Row hand-implements the semver-exempt clickhouse::Row trait
clickhouse = { version = "0.15", features = ["chrono", "inserter"] }
serde_repr = "*"

[lints]
workspace = true
