[package]
name = "framework_clickhouse"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true

# pinned to minor version: framework_macro::Row hand-implements the semver-exempt clickhouse::Row trait
clickhouse = { version = "*", features = ["chrono", "inserter", "rustls-tls"] }
serde.workspace = true
serde_repr = "*"

[lints]
workspace = true
