[package]
name = "framework_clickhouse"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
framework_macro.workspace = true

# pinned to minor version: framework_macro::Row hand-implements the semver-exempt clickhouse::Row trait
clickhouse = { version = "*", features = ["chrono", "inserter", "rustls-tls"] }
chrono.workspace = true
serde.workspace = true

[lints]
workspace = true
