[package]
name = "framework_kafka"
version.workspace = true
edition = "2024"

[dependencies]
framework.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true

futures = "*"
rdkafka = { version = "*", default-features = false, features = [
    "dynamic-linking",
    "tokio",
    "zstd",
] }

[lints]
workspace = true
